# chroma-spec

./: .gitignore  .pre-commit-config.yaml  README.rst  noxfile.py  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: constraints.txt  tests.yml
chroma_spec/: __init__.py  __main__.py  flashlight.py  spec.py  utils.py
data/: .gitignore  sotc.json  sotc.schema
docs/: conf.py  index.rst  quickstart.md  reference.rst  usage.rst
notebooks/: chroma_spec.ipynb
tests/: __init__.py  test_chroma_spec.py
