[tool.poetry]
name = "chroma-spec"
version = "0.1.5"
description = "chroma-spec"
authors = ["abr <abricier@users.noreply.github.com>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
colour-science = "^0.4.1"
matplotlib = "^3.7.2"
click = "^8.1.3"
imageio = "^2.31.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pre-commit = "^3.3.3"
flake8 = "^5.0.4"
isort = "^5.12.0"
black = "^23.7.0"
coverage = "^7.2.7"
pytest-cov = "^4.1.0"
flake8-docstrings = "^1.7.0"
jsonschema = "^4.19.0"
darglint = "^1.8.1"
Sphinx = "^6.2.1"
sphinx-click = "^4.4.0"
furo = "^2023.7.26"
xdoctest = "^1.1.1"
sphinx-autobuild = "^2021.3.14"
flake8-black = "^0.3.3"
flake8-bugbear = "^23.3.12"
flake8-isort = "^6.0.0"
flake8-rst-docstrings = "^0.3.0"
pep8-naming = "^0.13.1"
myst-parser = "^2.0.0"
flake8-pie = "^0.16.0"
flake8-simplify = "^0.20.0"
flake8-commas = "^2.1.0"
flake8-unused-arguments = "^0.0.11"
ipykernel = "^6.25.0"
jupyter = "^1.0.0"

[tool.poetry.scripts]
chroma-spec = "chroma_spec.__main__:main"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::colour.utilities.ColourRuntimeWarning",
    ]

[tool.coverage.paths]
source = ["chroma_spec", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["chroma_spec"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
